Setup start script and heroku port

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,8 @@
 <header>
-{{welcomeMessage}}
+{{welcomeMessage}}<br>
+</header>
+<header>
+<a href="/">Home</a>
+<a href="/about">About</a>
+<a href="/project">project</a>
 </header>
